added back button to part 1

--- a/part1.html
+++ b/part1.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-
+<a href="../webserver/index.html" class=" w-100 btn btn-info text-white" role="button">< Back</a>
 <script type="text/javascript">
 
     var config = {
