--- a/part1.html
+++ b/part1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Making your first Phaser 3 Game - Part 1</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css " rel="stylesheet">
     <style type="text/css">
         body {
             margin: 0;
@@ -11,7 +12,9 @@
     </style>
 </head>
 <body>
-<a href="../webserver/index.html" class=" w-100 btn btn-info text-white" role="button">< Back</a>
+<div>
+    <a href="../webserver/index.html" class=" w-100 btn btn-info text-white" role="button">< Back</a>
+</div>
 <script type="text/javascript">
 
     var config = {
